--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body {
   margin: 0;
   display: flex;
   /* place-items: center; */
-  min-width: 100%;
+  width: 100%;
   min-height: 100vh;
 }
 
