--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .home-container {
     display: flex;
     flex-direction: column;
-    width: 200vh;
+    width: 100%;
     height: 100%;
     background-color: green;
 }
